--- a/src/app/users/components/user-detail/repo-table/repo-table.component.html
+++ b/src/app/users/components/user-detail/repo-table/repo-table.component.html
@@ -1,22 +1,22 @@
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
 
-    <ng-container matColumnDef="desc">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+    <ng-container class="desc" matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by description"> Description </th>
       <td mat-cell *matCellDef="let row"> {{row.description}}% </td>
     </ng-container>
 
 
-    <ng-container matColumnDef="stars">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Stars </th>
+    <ng-container matColumnDef="stargazers_count">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by stargazers_count"> Stars </th>
       <td mat-cell *matCellDef="let row"> {{row.stargazers_count}} </td>
     </ng-container>
 
@@ -27,15 +27,15 @@
     </ng-container>
 
 
-        <ng-container matColumnDef="created">
+        <ng-container matColumnDef="created_at">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
-          <td mat-cell *matCellDef="let row"> {{row.created_at}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.created_at | date}} </td>
         </ng-container>
 
 
-    <ng-container matColumnDef="updated">
+    <ng-container matColumnDef="updated_at">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Updated </th>
-      <td mat-cell *matCellDef="let row"> {{row.updated_at}} </td>
+      <td mat-cell *matCellDef="let row"> {{row.updated_at | date}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
