--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -1,21 +1,28 @@
-<mat-card>
-  <form [formGroup]="loginForm" class="loginForm">
+<section class="loginWrapper">
+  <mat-card [ngClass]="{ blurBackground: showSpinner }">
+    <form [formGroup]="loginForm" class="loginForm">
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Gihub login</mat-label>
-        <input formControlName="name" type="text" matInput
-              placeholder="Ex. loginTest">
+        <input
+          formControlName="name"
+          type="text"
+          matInput
+          placeholder="Ex. loginTest"
+        />
       </mat-form-field>
 
       <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Password</mat-label>
-        <input formControlName="password" type="password" matInput>
+        <mat-label>Token</mat-label>
+        <input formControlName="password" type="password" matInput />
       </mat-form-field>
-  </form>
+    </form>
 
-  <section class="buttons">
-    <button [disabled]="!loginForm.valid" (click)="login()" mat-raised-button color="primary">Detail</button>
-    <button mat-raised-button color="accent" routerLink="/users">Without login</button>
-  </section>
-
-</mat-card>
-
+    <section class="buttons">
+      <button [disabled]="!loginForm.valid" (click)="login()" mat-raised-button>
+        Login
+      </button>
+      <button mat-raised-button routerLink="/users">Without login</button>
+    </section>
+    <mat-spinner class="spinner" *ngIf="showSpinner"></mat-spinner>
+  </mat-card>
+</section>
