--- a/src/app/users/components/user-detail/user-detail.component.css
+++ b/src/app/users/components/user-detail/user-detail.component.css
@@ -2,6 +2,12 @@
   height: 40%;
 }
 
-.hiden{
-  visibility: hidden;
+.userWrapper{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.backIcon{
+  cursor: pointer;
+  scale: 1.3;
 }
