--- a/src/app/users/components/user-detail/repo-table/repo-table.component.html
+++ b/src/app/users/components/user-detail/repo-table/repo-table.component.html
@@ -1,47 +1,67 @@
-
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
-
-
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    (matSortChange)="announceSortChange($event)"
+  >
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by name"
+      >
+        Name
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
     </ng-container>
-
 
     <ng-container class="desc" matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by description"> Description </th>
-      <td mat-cell *matCellDef="let row"> {{row.description}}% </td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by description"
+      >
+        Description
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.description }}%</td>
     </ng-container>
-
 
     <ng-container matColumnDef="stargazers_count">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by stargazers_count"> Stars </th>
-      <td mat-cell *matCellDef="let row"> {{row.stargazers_count}} </td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by stargazers_count"
+      >
+        Stars
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.stargazers_count }}</td>
     </ng-container>
-
 
     <ng-container matColumnDef="watchers">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Watchers </th>
-      <td mat-cell *matCellDef="let row"> {{row.watchers}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Watchers</th>
+      <td mat-cell *matCellDef="let row">{{ row.watchers }}</td>
     </ng-container>
 
-
-        <ng-container matColumnDef="created_at">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
-          <td mat-cell *matCellDef="let row"> {{row.created_at | date}} </td>
-        </ng-container>
-
+    <ng-container matColumnDef="created_at">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Created</th>
+      <td mat-cell *matCellDef="let row">{{ row.created_at | date }}</td>
+    </ng-container>
 
     <ng-container matColumnDef="updated_at">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Updated </th>
-      <td mat-cell *matCellDef="let row"> {{row.updated_at | date}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Updated</th>
+      <td mat-cell *matCellDef="let row">{{ row.updated_at | date }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    aria-label="Select page of users"
+  ></mat-paginator>
 </div>
