--- a/src/app/users/components/user-detail/user-detail.component.html
+++ b/src/app/users/components/user-detail/user-detail.component.html
@@ -1,11 +1,15 @@
 <section class="userWrapper">
-  <button routerLink="/users" (click)="setUserInStore()" mat-raised-button color="accent">
+  <i
+    routerLink="/users"
+    (click)="setUserInStore()"
+    class="material-icons backIcon"
+    >arrow_back</i
+  >
+  <!-- <button  mat-raised-button color="accent">
     Back
-  </button>
+  </button> -->
 
   <app-user-card [user]="this.user"></app-user-card>
-  <mat-slide-toggle [(ngModel)]="showTable">Show repositories</mat-slide-toggle>
 
-  <app-repo-table [ngClass]="{'hiden' : !showTable}"></app-repo-table>
-
+  <app-repo-table></app-repo-table>
 </section>
