working login, logged user next to the tree, dynamic path

--- a/src/app/login/components/login/login.component.html
+++ b/src/app/login/components/login/login.component.html
@@ -2,26 +2,22 @@
   <mat-card [ngClass]="{ blurBackground: showSpinner }">
     <form [formGroup]="loginForm" class="loginForm">
       <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Gihub login</mat-label>
-        <input
-          formControlName="name"
-          type="text"
-          matInput
-          placeholder="Ex. loginTest"
-        />
-      </mat-form-field>
-
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Token</mat-label>
-        <input formControlName="password" type="password" matInput />
+        <mat-label>Github personal token</mat-label>
+        <input formControlName="token" type="password" matInput />
       </mat-form-field>
     </form>
 
     <section class="buttons">
-      <button [disabled]="!loginForm.valid" (click)="login()" mat-raised-button>
+      <button
+        [disabled]="!loginForm.valid || showSpinner"
+        (click)="login()"
+        mat-raised-button
+      >
         Login
       </button>
-      <button mat-raised-button routerLink="/users">Without login</button>
+      <button mat-raised-button routerLink="/users" [disabled]="showSpinner">
+        Without login
+      </button>
     </section>
     <mat-spinner class="spinner" *ngIf="showSpinner"></mat-spinner>
   </mat-card>
