--- a/src/app/users/components/user-detail/user-detail.component.css
+++ b/src/app/users/components/user-detail/user-detail.component.css
@@ -5,9 +5,10 @@
 .userWrapper{
   margin-left: 20px;
   margin-right: 20px;
+  margin-top: 20px;
 }
 
 .backIcon{
-  cursor: pointer;
-  scale: 1.3;
+    cursor: pointer;
+    transform: scale(1.2);
 }
