--- a/src/app/users/components/users-tree/users-tree.component.css
+++ b/src/app/users/components/users-tree/users-tree.component.css
@@ -1,3 +1,14 @@
 .buttonMargin{
   margin-left: 10px;
 }
+
+.wrapper{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+mat-tree-node{
+  padding: 0;
+}
