--- a/src/app/users/components/users-tree/users-tree.component.html
+++ b/src/app/users/components/users-tree/users-tree.component.html
@@ -1,36 +1,44 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-    <button mat-icon-button disabled></button>
-    {{ node.login }}
-  </mat-tree-node>
-  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <button
-      mat-icon-button
-      [attr.aria-label]="'Toggle ' + node.item"
-      matTreeNodeToggle
+<section class="wrapper">
+  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+      <button mat-icon-button disabled></button>
+      {{ node.login }}
+    </mat-tree-node>
+    <mat-tree-node
+      *matTreeNodeDef="let node; when: hasChild"
+      matTreeNodePadding
     >
-      <mat-icon class="mat-icon-rtl-mirror">
-        {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
-      </mat-icon>
-    </button>
-    <mat-checkbox
-      [checked]="this.selectedNode.id === node.id"
-      (change)="handleChange(node)"
-      class="checklist-leaf-node"
-      >{{ node.login }}</mat-checkbox
-    >
-    <button
-      (click)="setUserInStore()"
-      class="buttonMargin"
-      mat-raised-button
-      *ngIf="this.selectedNode.id === node.id"
-    >
-      Detail
-    </button>
-    <mat-progress-bar
-      *ngIf="node.isLoading"
-      mode="indeterminate"
-      class="example-tree-progress-bar"
-    ></mat-progress-bar>
-  </mat-tree-node>
-</mat-tree>
+      <button
+        mat-icon-button
+        [attr.aria-label]="'Toggle ' + node.item"
+        matTreeNodeToggle
+      >
+        <mat-icon class="mat-icon-rtl-mirror">
+          {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
+        </mat-icon>
+      </button>
+      <mat-checkbox
+        [checked]="this.selectedNode.id === node.id"
+        (change)="handleChange(node)"
+        class="checklist-leaf-node"
+        >{{ node.login }}</mat-checkbox
+      >
+      <button
+        (click)="setUserInStore(node)"
+        class="buttonMargin"
+        mat-raised-button
+        [disabled]="loading"
+        *ngIf="this.selectedNode.id === node.id"
+      >
+        Detail
+      </button>
+      <mat-progress-bar
+        *ngIf="node.isLoading"
+        mode="indeterminate"
+        class="example-tree-progress-bar"
+      ></mat-progress-bar>
+    </mat-tree-node>
+  </mat-tree>
+
+  <app-user-card [user]="loggedUser"></app-user-card>
+</section>
