--- a/src/app/users/components/users-tree/users-tree.component.css
+++ b/src/app/users/components/users-tree/users-tree.component.css
@@ -2,7 +2,7 @@
   margin-left: 10px;
 }
 
-.wrapper{
+.wrapperContent{
   display: flex;
   justify-content: space-between;
   margin-right: 20px;
@@ -11,4 +11,15 @@
 
 mat-tree-node{
   padding: 0;
+}
+
+.spinner{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.blurBackground{
+  opacity: 0.5;
 }
