--- a/src/app/views/users/user-detail/repo-table/repo-table.component.css
+++ b/src/app/views/users/user-detail/repo-table/repo-table.component.css
@@ -10,3 +10,12 @@ table {
  th {
   width: 15%;
 }
+
+.mat-column-description {
+  width: 40%;
+}
+
+.spinner{
+  margin-left: auto;
+  margin-right: auto;
+}
