--- a/src/app/views/users/user-detail/repo-table/repo-table.component.html
+++ b/src/app/views/users/user-detail/repo-table/repo-table.component.html
@@ -64,4 +64,6 @@
     [pageSizeOptions]="[5, 10, 25, 100]"
     aria-label="Select page of users"
   ></mat-paginator>
+
+  <mat-spinner class="spinner" *ngIf="loading"></mat-spinner>
 </div>
