--- a/src/app/views/login/components/login/login.component.scss
+++ b/src/app/views/login/components/login/login.component.scss
@@ -13,11 +13,11 @@ form{
   flex-direction: column;
 }
 
-.buttons{
+.buttonWrapper{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  margin-bottom: 5px;
 }
 
 .spinner{
