--- a/src/app/views/users/users-tree/users-tree.component.scss
+++ b/src/app/views/users/users-tree/users-tree.component.scss
@@ -43,9 +43,12 @@ mat-tree-node{
 }
 
 .userDetailWrapper{
-  //TODO
     margin-left: 20px;
     position: absolute;
     left: 190px;
     z-index: 5;
+}
+
+.buttonMargin{
+  margin-left: 50px;
 }
