--- a/src/app/views/users/users-tree/users-tree.component.scss
+++ b/src/app/views/users/users-tree/users-tree.component.scss
@@ -47,6 +47,9 @@ mat-tree-node{
     position: absolute;
     left: 190px;
     z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .buttonMargin{
