mat spinner change, added tests

--- a/src/app/views/login/components/login/login.component.html
+++ b/src/app/views/login/components/login/login.component.html
@@ -22,8 +22,9 @@
       </section>
     </form>
     <button
+      id="buttonNoLogin"
       mat-raised-button
-      routerLink="/users/list"
+      routerLink="/users"
       [disabled]="isLoading$ | async"
       (click)="setUser()"
     >
