--- a/src/app/views/users/user-detail/user-card/user-card.component.html
+++ b/src/app/views/users/user-detail/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<mat-card class="example-card" *ngIf="user">
   <mat-card-title-group>
     <mat-card-title>{{ user.login }}</mat-card-title>
     <mat-card-subtitle>{{ user.name }}</mat-card-subtitle>
