--- a/src/app/views/users/users-tree/users-tree.component.html
+++ b/src/app/views/users/users-tree/users-tree.component.html
@@ -53,6 +53,13 @@
             </button>
           </section>
 
+          <!-- <mat-spinner
+            [diameter]="30"
+            mode="indeterminate"
+            class="spinnerBar"
+            *ngIf="node.isLoading"
+          ></mat-spinner> -->
+
           <mat-progress-bar
             *ngIf="node.isLoading"
             mode="indeterminate"
